spacing fix for free trial notification in article sidebar

--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -25,6 +25,7 @@
 		text-align: center;
 		.free-trial-head{
 			display: block;
+			margin-bottom: 5px;
 			width: 100%;
 			padding: 5px 10px;
 			font-weight: bold;
